hphp/hack/test/package_v2/package_access/include_paths_bad4.php.exp
error: Typing[4472] Cannot access a public element which belongs to package pkg2 from package pkg1 [1]
-> This is from include_paths_bad4.php--__tests__.php, which belongs to package pkg2 [2]
-> But include_paths_bad4.php--foo.php is in package pkg1, and package pkg1 does not include package pkg2 [3]

include_paths_bad4.php--foo.php:3:24
1 | <?hh
2 | // package pkg1
[1] 3 | function foo(): void { test (); }

include_paths_bad4.php--__tests__.php:3:10
1 | <?hh
2 | // package pkg2
[2] 3 | function test(): void {}

PACKAGES.toml:3:11
1 | [packages]
2 |
[3] 3 | [packages.pkg1]
4 | include_paths=["./*"]
5 |

1 error found.