hphp/hack/test/package_v2/package_access/include_paths_bad4.php--__tests__.php
<?hh
// package pkg2
function test(): void {}
